--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
 :root {
   --box-shadow: 4px 4px 1px #0000003f;
+  --primary-color: #1f2833;
+  --bg-primary-color: #0b0c10;
+  --retro-text-color: #fff;
+  --retro-text-color-2: #3d9b95;
+  --box-shadow-color: #0000005e;
 }
 * {
   padding: 0;
@@ -11,6 +16,59 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+/* Navbar */
+.nav-container {
+  font-family: "Montserrat Alternates", Arial, Helvetica, sans-serif;
+  height: 10vh;
+}
+.navbar {
+  background: var(--primary-color);
+  width: 100%;
+  position: fixed;
+  display: flex;
+  height: 10vh;
+}
+.navbar .container {
+  padding: 0 10px;
+  display: flex;
+  margin: auto;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 1140px;
+}
+nav .main-logo a {
+  text-decoration: none;
+  color: var(--retro-text-color);
+  font-size: 1.8rem;
+}
+@media (max-width: 600px) {
+  nav .main-logo a {
+    font-size: 1.5rem;
+  }
+}
+.navbar ul {
+  display: flex;
+  list-style: none;
+  font-weight: 600;
+}
+.navbar ul li {
+  padding: 10px;
+}
+.navbar ul a {
+  text-decoration: none;
+  color: var(--retro-text-color);
+}
+/* Navbar */
+/* GPA CALC SECTION */
+.gpa-calculator-section {
+  background: #fff;
+  padding: 20px 0px;
+  /* GPA CALC HEADERS */
+  color: #000;
+  margin-top: 10px;
+}
+/* GPA CALC SECTION */
 .gpa-main-head {
   text-align: center;
   margin-top: 50px;
