--- a/darkmode.css
+++ b/darkmode.css
@@ -1,37 +1,15 @@
-/* Global Styles 
-   =============
-*/
-
 :root {
-  --clr-bcg: rgba(0, 0, 0, 0.18);
+  --clr-bcg: #fff;
   --clr-font: #282c35;
   --clr-grey: #64748b;
 }
-
-/* DARK MODE OPTIONS */
 .dark-mode {
   --clr-bcg: rgb(45, 45, 45);
   --clr-font: #fff;
   --clr-grey: #cbd5e1;
 }
-.btn {
-  border: none;
-  padding: 10px;
-  position: fixed;
-  top: 10vh;
-  right: 0%;
-  font-weight: bold;
-  z-index: 100000;
-}
-.btn {
-  font-size: 1.5rem;
-  color: #1f2833;
-}
-.dark-btn {
-  color: #fff;
-  background: #1f2833;
-}
 /* DARK MODE OPTIONS */
+/* DM OPTIONS */
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -40,8 +18,4 @@ body {
   line-height: 1.5;
   font-size: 1rem;
   transition: all 0.2s linear;
-}
-
-.cs-home-greet {
-  background: none;
 }
