--- a/styles.css
+++ b/styles.css
@@ -5,61 +5,193 @@
   --retro-text-color: #fff;
   --retro-text-color-2: #3d9b95;
   --box-shadow-color: #0000005e;
+
+  /* GLOBAL */
+
+  --primary-icon-color: #fff;
+  --primary-nav-bg-color: #d7d7d7;
+  --primary-translate: translate(-50%, -50%);
+  --primary-transition: all 0.35s ease-in-out;
+  --primary-outline: 1px solid rgba(0, 0, 0, 0.2);
+  --primary-box-shadow: 8px 8px 2px rgba(0, 0, 0, 0.2);
+  --primary-font-family: system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
+  --developer-name-font-family: "Bungee", system-ui, -apple-system,
+    BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+    "Open Sans", "Helvetica Neue", sans-serif;
+
+  /* DARKMODE STYLES */
+  --darkmode-nav-bg-color: #86868664;
+  --darkmode-btn-color: #ffffff;
+  --darkmode-toggle-shadow: 2px 5px 2px rgba(0, 0, 0, 0.2);
+  /* MODAL STYLES */
+  --modal-background-color: rgba(0, 0, 0, 0.925);
+  /* NAV LINK STYLES */
+  --nav-link-color: #fff;
+  /* SOCIAL LINK COLORS */
+  --social-link-background: #000;
+  --linkedin-icon-color: rgba(43, 100, 255, 1);
+  --github-icon-color: rgb(118, 0, 214);
+  --email-icon-color: rgba(0, 184, 138, 1);
+  /* FORM STYLES */
+  --form-outline: 1px solid rgba(0, 0, 0, 0.2);
+  --form-shadow-inset: inset 5px 5px 2px rgba(0, 0, 0, 0.2);
 }
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
+/* GLOBAL STYLES */
+ul {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+  color: inherit;
+}
+/* END OF GLOBAL STYLES */
 body {
   color: #fff;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-/* Navbar */
-.nav-container {
-  font-family: "Montserrat Alternates", Arial, Helvetica, sans-serif;
-  height: 10vh;
+/* NAVBAR */
+section.navbar-section {
+  background: none;
+  height: 70px;
 }
-.navbar {
-  background: var(--primary-color);
-  width: 100%;
+/* DARK MODE STYLES */
+.darkmode-options {
   position: fixed;
-  display: flex;
-  height: 10vh;
+  top: 20%;
+  text-align: center;
+  outline: var(--primary-outline);
+  background: var(--darkmode-btn-color);
+  color: #000;
+  padding: 12px;
+  left: -34px;
+  transition: var(--primary-transition);
+  z-index: 100;
 }
-.navbar .container {
-  padding: 0 10px;
-  display: flex;
-  margin: auto;
+.darkmode-options:hover {
+  left: -2px;
+  box-shadow: var(--darkmode-toggle-shadow);
+}
+.fa-sun,
+.fa-moon {
+  cursor: pointer;
+  padding: 5px;
+}
+/* JS HIDE AND SHOW */
+.hide {
+  display: none;
+}
+/* DARK MODE STYLES */
+.navbar-container {
   width: 100%;
-  align-items: center;
-  justify-content: space-between;
-  max-width: 1140px;
-}
-nav .main-logo a {
-  text-decoration: none;
-  color: var(--retro-text-color);
-  font-size: 1.8rem;
-}
-@media (max-width: 600px) {
-  nav .main-logo a {
-    font-size: 1.5rem;
-  }
-}
-.navbar ul {
-  display: flex;
-  list-style: none;
-  font-weight: 600;
-}
-.navbar ul li {
+  height: 70px;
   padding: 10px;
+  overflow: hidden;
+  z-index: 99999;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
-.navbar ul a {
-  text-decoration: none;
-  color: var(--retro-text-color);
+/* TOGGLE MENU */
+.navbar-toggle {
+  /* position: absolute; */
+  left: 0%;
+  top: 0%;
+  /* Added (BELOW) */
+  position: fixed;
 }
-/* Navbar */
+/* GEN STYLES */
+.toggle {
+  font-size: 30px;
+  padding: 10px;
+  z-index: 250;
+  cursor: pointer;
+}
+.hide-toggle {
+  display: none;
+}
+/* MODAL MENU */
+.modal-menu {
+  background: var(--modal-background-color);
+  position: fixed;
+  top: 0;
+  z-index: 200;
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+  border-radius: 0;
+  padding: 30px;
+}
+.modal-menu-content {
+  position: absolute;
+  width: 700px;
+  left: 50%;
+  top: 50%;
+  transform: var(--primary-translate);
+}
+.fa-xmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: var(--nav-link-color);
+}
+.hide-modal-menu {
+  display: none;
+}
+/* MODAL MENU */
+/* TOGGLE MENU */
+
+/* NAV LINKS */
+.navbar-link-container {
+  font-weight: bold;
+  font-size: 3.4rem;
+  padding: 10px 20px;
+  gap: 5rem;
+  display: flex;
+  flex-direction: column;
+  /* background: purple; */
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: var(--primary-translate);
+  width: 100%;
+}
+.navbar-link {
+  text-align: center;
+  color: var(--nav-link-color);
+  padding: 5px 10px;
+  transition: var(--primary-transition);
+}
+.navbar-link:hover {
+  transform: translateY(-10px);
+}
+.fa-linkedin,
+.fa-github,
+.fa-envelope {
+  transition: var(--primary-transition);
+}
+.navbar-link #linkedin-icon:hover {
+  color: var(--linkedin-icon-color);
+}
+.navbar-link #github-icon:hover {
+  color: var(--github-icon-color);
+}
+.navbar-link #envelope-icon:hover {
+  color: var(--email-icon-color);
+}
+
+.navbar-social-container {
+  text-align: center;
+}
+/* NAV LINKS */
+/* NAVBAR */
 /* GPA CALC SECTION */
 .gpa-calculator-section {
   background: #fff;
@@ -104,11 +236,11 @@ form {
 form input {
   margin: 10px;
   border: none;
-  background: #e7e7e7;
   font-weight: bold;
   /* box-shadow: var(--box-shadow); */
   text-align: center;
-  border-radius: 10px;
+  outline: var(--primary-outline);
+  box-shadow: 5px 5px 1px rgba(0, 0, 0, 0.2);
 }
 .user-input {
   padding: 10px;
@@ -138,9 +270,6 @@ form input.quality-points {
 form input::placeholder {
   color: rgba(0, 0, 0, 0.351);
 }
-input:focus {
-  outline: none;
-}
 /* END OF FORM/INPUT STYLE */
 /* CALC DETAILS */
 .scale-title {
@@ -149,6 +278,14 @@ input:focus {
 }
 .scale-details {
   margin: 20px auto;
+  outline: var(--primary-outline);
+  box-shadow: var(--primary-box-shadow);
+  height: 200px;
+  overflow: hidden;
+  transition: var(--primary-transition);
+}
+.scale-details:hover {
+  height: 700px;
 }
 .gpa-calc-details {
   display: flex;
@@ -165,8 +302,7 @@ ul.quality-pt-list {
   padding: 10px;
   list-style: none;
   text-transform: capitalize;
-  border: 1px solid #00000032;
-  border-radius: 10px;
+  outline: var(--primary-outline);
   width: 370px;
 }
 /* CALC DETAILS */
@@ -208,8 +344,7 @@ ul.quality-pt-list {
 .results-container {
   padding: 10px;
   margin-top: 20px;
-  border-radius: 10px;
-  border: 1px solid #00000032;
+  outline: var(--primary-outline);
   width: 300px;
   height: 55px;
   display: flex;
@@ -230,31 +365,42 @@ ul.quality-pt-list {
 
 /* GPA TABLE SECTION */
 .gpa-table-section {
-  /* color: #000; */
+  position: relative;
+  top: -20px;
   max-width: 150px;
   display: flex;
   justify-content: center;
   padding: 10px;
   margin: auto;
   margin-top: 40px;
+  height: 200px;
+  overflow: hidden;
+  box-shadow: var(--primary-box-shadow);
+  outline: var(--primary-outline);
+  transition: var(--primary-transition);
+}
+.gpa-table-section:hover {
+  height: 600px;
+}
+.expand-tools {
+  text-align: center;
+  border-bottom: 1px solid #000;
+  width: 350px;
+  margin: auto;
 }
 td {
   text-align: center;
 }
 table {
   width: 100%;
-  border: 1px solid #00000032;
   padding: 10px;
-  border-radius: 10px;
 }
 td {
-  background: #ffffff;
-
-  border-radius: 20px;
+  background: black;
+  color: #fff;
   box-shadow: var(--box-shadow);
   padding: 5px;
   font-weight: bold;
-  color: #000;
 }
 /* END OF GPA TABLE SECTION */
 
@@ -290,10 +436,18 @@ footer p span {
 .social-connect i {
   font-size: 2rem;
   transition: all 0.25s ease-in-out;
-  color: #000;
+  color: var(--github-icon-color);
 }
 .social-connect i:hover {
   transform: scale(1.2);
 }
+.main-site-redirect-link a {
+  font-weight: 600;
+  color: rgb(176, 176, 176);
+  transition: var(--primary-transition);
+}
+.main-site-redirect-link a:hover {
+  color: #000;
+}
 /* Footer */
-/* FOOTER+ */
+/* FOOTER+ */ ;
