--- a/styles.css
+++ b/styles.css
@@ -1,473 +1,1 @@
-:root {
-  --box-shadow: 4px 4px 1px #0000003f;
-  --primary-color: #1f2833;
-  --bg-primary-color: #0b0c10;
-  --retro-text-color: #fff;
-  --retro-text-color-2: #3d9b95;
-  --box-shadow-color: #0000005e;
-
-  /* GLOBAL */
-
-  --primary-icon-color: #fff;
-  --primary-nav-bg-color: #d7d7d7;
-  --primary-translate: translate(-50%, -50%);
-  --primary-transition: all 0.35s ease-in-out;
-  --primary-outline: 1px solid rgba(0, 0, 0, 0.2);
-  --primary-box-shadow: 8px 8px 2px rgba(0, 0, 0, 0.2);
-  --primary-font-family: system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-    sans-serif;
-  --developer-name-font-family: "Bungee", system-ui, -apple-system,
-    BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
-    "Open Sans", "Helvetica Neue", sans-serif;
-
-  /* DARKMODE STYLES */
-  --darkmode-nav-bg-color: #86868664;
-  --darkmode-btn-color: #ffffff;
-  --darkmode-toggle-shadow: 2px 5px 2px rgba(0, 0, 0, 0.2);
-  /* MODAL STYLES */
-  --modal-background-color: rgba(0, 0, 0, 0.925);
-  /* NAV LINK STYLES */
-  --nav-link-color: #fff;
-  /* SOCIAL LINK COLORS */
-  --social-link-background: #000;
-  --linkedin-icon-color: rgba(43, 100, 255, 1);
-  --github-icon-color: rgb(118, 0, 214);
-  --email-icon-color: rgba(0, 184, 138, 1);
-  /* FORM STYLES */
-  --form-outline: 1px solid rgba(0, 0, 0, 0.2);
-  --form-shadow-inset: inset 5px 5px 2px rgba(0, 0, 0, 0.2);
-}
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-/* GLOBAL STYLES */
-ul {
-  list-style: none;
-}
-a {
-  text-decoration: none;
-  color: inherit;
-}
-/* END OF GLOBAL STYLES */
-body {
-  color: #fff;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-/* NAVBAR */
-.main-head {
-  padding: 10px;
-  font-weight: 900;
-}
-section.navbar-section {
-  background: none;
-  height: 70px;
-}
-/* DARK MODE STYLES */
-.darkmode-options {
-  position: fixed;
-  top: 20%;
-  text-align: center;
-  outline: var(--primary-outline);
-  background: var(--darkmode-btn-color);
-  color: #000;
-  padding: 12px;
-  left: -34px;
-  transition: var(--primary-transition);
-  z-index: 100;
-}
-.darkmode-options:hover {
-  left: -2px;
-  box-shadow: var(--darkmode-toggle-shadow);
-}
-.fa-sun,
-.fa-moon {
-  cursor: pointer;
-  padding: 5px;
-}
-/* JS HIDE AND SHOW */
-.hide {
-  display: none;
-}
-/* DARK MODE STYLES */
-.navbar-container {
-  width: 100%;
-  height: 70px;
-  padding: 10px;
-  overflow: hidden;
-  z-index: 99999;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-/* TOGGLE MENU */
-.navbar-toggle {
-  position: absolute;
-  right: 0%;
-  top: 0%;
-  /* Added (BELOW) */
-  position: fixed;
-}
-/* GEN STYLES */
-.toggle {
-  font-size: 30px;
-  padding: 10px;
-  z-index: 250;
-  cursor: pointer;
-}
-.hide-toggle {
-  display: none;
-}
-/* MODAL MENU */
-.modal-menu {
-  background: var(--modal-background-color);
-  position: fixed;
-  top: 0;
-  z-index: 200;
-  overflow: hidden;
-  width: 100vw;
-  height: 100vh;
-  border-radius: 0;
-  padding: 30px;
-}
-.modal-menu-content {
-  position: absolute;
-  width: 700px;
-  left: 50%;
-  top: 50%;
-  transform: var(--primary-translate);
-}
-.fa-xmark {
-  position: absolute;
-  top: 0;
-  right: 0;
-  color: var(--nav-link-color);
-}
-.hide-modal-menu {
-  display: none;
-}
-/* MODAL MENU */
-/* TOGGLE MENU */
-
-/* NAV LINKS */
-.navbar-link-container {
-  font-weight: bold;
-  font-size: 3.4rem;
-  padding: 10px 20px;
-  gap: 5rem;
-  display: flex;
-  flex-direction: column;
-  /* background: purple; */
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: var(--primary-translate);
-  width: 100%;
-}
-.navbar-link {
-  text-align: center;
-  color: var(--nav-link-color);
-  padding: 5px 10px;
-  transition: var(--primary-transition);
-}
-.navbar-link:hover {
-  transform: translateY(-10px);
-}
-.fa-linkedin,
-.fa-github,
-.fa-envelope {
-  transition: var(--primary-transition);
-}
-.navbar-link #linkedin-icon:hover {
-  color: var(--linkedin-icon-color);
-}
-.navbar-link #github-icon:hover {
-  color: var(--github-icon-color);
-}
-.navbar-link #envelope-icon:hover {
-  color: var(--email-icon-color);
-}
-
-.navbar-social-container {
-  text-align: center;
-}
-/* NAV LINKS */
-/* NAVBAR */
-/* GPA CALC SECTION */
-.gpa-calculator-section {
-  background: #fff;
-  padding: 20px 0px;
-  /* GPA CALC HEADERS */
-  color: #000;
-}
-/* GPA CALC SECTION */
-.gpa-main-head {
-  text-align: center;
-  margin-top: 70px;
-  margin-bottom: 10px;
-}
-/* INPUT LABELS */
-.input-labels span {
-  padding: 10px;
-}
-label {
-  font-size: 16px;
-  font-weight: bold;
-}
-.input-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-/* INPUT LABELS */
-/* FORM/INPUT STYLE */
-form {
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  margin: 10px 10px;
-}
-.input-container {
-  display: flex;
-}
-.form-input {
-  display: flex;
-  align-items: center;
-}
-form input {
-  margin: 10px;
-  border: none;
-  font-weight: bold;
-  /* box-shadow: var(--box-shadow); */
-  text-align: center;
-  outline: var(--primary-outline);
-  box-shadow: 5px 5px 1px rgba(0, 0, 0, 0.2);
-}
-.user-input {
-  padding: 10px;
-}
-.class-input {
-  display: flex;
-}
-/* Form Details */
-form input.class {
-  width: 150px;
-}
-form input.credit-hours {
-  width: 80px;
-}
-form input.letter-grade {
-  width: 60px;
-}
-form input.letter-points {
-  /* Will Auto Pop From JS */
-  width: 60px;
-}
-form input.quality-points {
-  /* Will Auto Pop From JS */
-  width: 60px;
-}
-/* Form Details */
-form input::placeholder {
-  color: rgba(0, 0, 0, 0.351);
-}
-/* END OF FORM/INPUT STYLE */
-/* CALC DETAILS */
-.scale-title {
-  text-transform: uppercase;
-  margin-bottom: 10px;
-}
-.scale-details {
-  margin: 20px auto;
-  outline: var(--primary-outline);
-  box-shadow: var(--primary-box-shadow);
-  height: 200px;
-  overflow: hidden;
-  transition: var(--primary-transition);
-}
-.scale-details:hover {
-  height: 700px;
-}
-.gpa-calc-details {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-  padding: 10px;
-  max-width: 800px;
-  margin: auto;
-}
-ul.quality-pt-list {
-  text-align: center;
-  padding: 10px;
-  list-style: none;
-  text-transform: capitalize;
-  outline: var(--primary-outline);
-  width: 370px;
-}
-/* CALC DETAILS */
-
-/* BTNS */
-.btns {
-  padding: 8px 15px;
-  font-size: 1rem;
-  margin: 5px;
-  border: none;
-  font-weight: bold;
-  transition: 0.25s ease-in-out;
-  cursor: pointer;
-  color: #fff;
-}
-#add-row-id {
-  background: rgb(0, 188, 0);
-}
-#submit-input-id {
-  background: rgb(0, 128, 188);
-}
-#add-row-id:hover {
-  box-shadow: var(--box-shadow);
-}
-#submit-input-id:hover {
-  box-shadow: var(--box-shadow);
-}
-
-/* END OF BTNS */
-.gpa-calculator-section {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 10px;
-}
-
-/* RESULT */
-.results-container {
-  padding: 10px;
-  margin-top: 20px;
-  outline: var(--primary-outline);
-  width: 300px;
-  height: 55px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-/* End OF RESULT */
-
-/* ERROR */
-.error {
-  margin-top: 20px;
-  font-size: 18px;
-  font-weight: bold;
-  color: red;
-}
-/* END OF ERROR */
-
-/* GPA TABLE SECTION */
-.gpa-table-section {
-  position: relative;
-  top: -20px;
-  max-width: 150px;
-  display: flex;
-  justify-content: center;
-  padding: 10px;
-  margin: auto;
-  margin-top: 40px;
-  height: 200px;
-  overflow: hidden;
-  box-shadow: var(--primary-box-shadow);
-  outline: var(--primary-outline);
-  transition: var(--primary-transition);
-}
-.gpa-table-section:hover {
-  height: 600px;
-}
-.additional-link {
-  position: absolute;
-  left: 50%;
-  top: 95px;
-  transform: translateX(-50%);
-  text-align: center;
-  margin: auto;
-  outline: var(--primary-outline);
-  padding: 5px 10px;
-  box-shadow: var(--primary-box-shadow);
-  transition: var(--primary-transition);
-}
-.additional-link:hover {
-  background-color: black;
-  color: #fff;
-}
-.expand-tools {
-  text-align: center;
-  border-bottom: 1px solid #000;
-  width: 350px;
-  margin: 30px auto;
-}
-td {
-  text-align: center;
-}
-table {
-  width: 100%;
-  padding: 10px;
-}
-td {
-  background: black;
-  color: #fff;
-  box-shadow: var(--box-shadow);
-  padding: 5px;
-  font-weight: bold;
-}
-/* END OF GPA TABLE SECTION */
-
-/* FOOTER+ */
-footer {
-  position: relative;
-  width: 100%;
-  margin-bottom: 10px;
-  bottom: 0;
-  transition: 0.3s ease-in-out;
-}
-/* JS */
-.footer-show {
-  bottom: 0;
-}
-footer p {
-  text-align: center;
-}
-footer p span {
-  color: rgb(98, 98, 98);
-}
-
-.social-connect {
-  text-align: center;
-  margin: 20px auto;
-}
-.social-connect h1 {
-  max-width: 400px;
-  margin: 20px auto;
-  padding: 5px;
-  border-bottom: 1px solid #c9c9c9;
-}
-.social-connect i {
-  font-size: 2rem;
-  transition: all 0.25s ease-in-out;
-  color: var(--github-icon-color);
-}
-.social-connect i:hover {
-  transform: scale(1.2);
-}
-.main-site-redirect-link a {
-  font-weight: 600;
-  color: rgb(176, 176, 176);
-  transition: var(--primary-transition);
-}
-.main-site-redirect-link a:hover {
-  color: #000;
-}
-/* Footer */
-/* FOOTER+ */ ;
+:root {--box-shadow: 4px 4px 1px #0000003f;--primary-color: #1f2833;--bg-primary-color: #0b0c10;--retro-text-color: #fff;--retro-text-color-2: #3d9b95;--box-shadow-color: #0000005e;--primary-icon-color: #fff;--primary-nav-bg-color: #d7d7d7;--primary-translate: translate(-50%, -50%);--primary-transition: all 0.35s ease-in-out;--primary-outline: 1px solid rgba(0, 0, 0, 0.2);--primary-box-shadow: 8px 8px 2px rgba(0, 0, 0, 0.2);--primary-font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;--developer-name-font-family: "Bungee", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;--darkmode-nav-bg-color: #86868664;--darkmode-btn-color: #ffffff;--darkmode-toggle-shadow: 2px 5px 2px rgba(0, 0, 0, 0.2);--modal-background-color: rgba(0, 0, 0, 0.925);--nav-link-color: #fff;--social-link-background: #000;--linkedin-icon-color: rgba(43, 100, 255, 1);--github-icon-color: rgb(118, 0, 214);--email-icon-color: rgba(0, 184, 138, 1);--form-outline: 1px solid rgba(0, 0, 0, 0.2);--form-shadow-inset: inset 5px 5px 2px rgba(0, 0, 0, 0.2);}* {padding: 0;margin: 0;box-sizing: border-box;}ul {list-style: none;}a {text-decoration: none;color: inherit;}body {color: #fff;font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;}.main-head {padding: 10px;font-weight: 900;}section.navbar-section {background: none;height: 70px;}.darkmode-options {position: fixed;top: 20%;text-align: center;outline: var(--primary-outline);background: var(--darkmode-btn-color);color: #000;padding: 12px;left: -34px;transition: var(--primary-transition);z-index: 100;}.darkmode-options:hover {left: -2px;box-shadow: var(--darkmode-toggle-shadow);}.fa-sun, .fa-moon {cursor: pointer;padding: 5px;}.hide {display: none;}.navbar-container {width: 100%;height: 70px;padding: 10px;overflow: hidden;z-index: 99999;display: flex;justify-content: space-around;align-items: center;}.navbar-toggle {position: absolute;right: 0%;top: 0%;position: fixed;}.toggle {font-size: 30px;padding: 10px;z-index: 250;cursor: pointer;}.hide-toggle {display: none;}.modal-menu {background: var(--modal-background-color);position: fixed;top: 0;z-index: 200;overflow: hidden;width: 100vw;height: 100vh;border-radius: 0;padding: 30px;}.modal-menu-content {position: absolute;width: 700px;left: 50%;top: 50%;transform: var(--primary-translate);}.fa-xmark {position: absolute;top: 0;right: 0;color: var(--nav-link-color);}.hide-modal-menu {display: none;}.navbar-link-container {font-weight: bold;font-size: 3.4rem;padding: 10px 20px;gap: 5rem;display: flex;flex-direction: column;position: absolute;left: 50%;top: 50%;transform: var(--primary-translate);width: 100%;}.navbar-link {text-align: center;color: var(--nav-link-color);padding: 5px 10px;transition: var(--primary-transition);}.navbar-link:hover {transform: translateY(-10px);}.fa-linkedin, .fa-github, .fa-envelope {transition: var(--primary-transition);}.navbar-link #linkedin-icon:hover {color: var(--linkedin-icon-color);}.navbar-link #github-icon:hover {color: var(--github-icon-color);}.navbar-link #envelope-icon:hover {color: var(--email-icon-color);}.navbar-social-container {text-align: center;}.gpa-calculator-section {background: #fff;padding: 20px 0px;color: #000;}.gpa-main-head {text-align: center;margin-top: 70px;margin-bottom: 10px;}.input-labels span {padding: 10px;}label {font-size: 16px;font-weight: bold;}.input-content {display: flex;flex-direction: column;align-items: center;}form {text-align: center;display: flex;flex-direction: column;margin: 10px 10px;}.input-container {display: flex;}.form-input {display: flex;align-items: center;}form input {margin: 10px;border: none;font-weight: bold;text-align: center;outline: var(--primary-outline);box-shadow: 5px 5px 1px rgba(0, 0, 0, 0.2);}.user-input {padding: 10px;}.class-input {display: flex;}form input.class {width: 150px;}form input.credit-hours {width: 80px;}form input.letter-grade {width: 60px;}form input.letter-points {width: 60px;}form input.quality-points {width: 60px;}form input::placeholder {color: rgba(0, 0, 0, 0.351);}.scale-title {text-transform: uppercase;margin-bottom: 10px;}.scale-details {margin: 20px auto;outline: var(--primary-outline);box-shadow: var(--primary-box-shadow);height: 200px;overflow: hidden;transition: var(--primary-transition);}.scale-details:hover {height: 700px;}.gpa-calc-details {display: flex;flex-wrap: wrap;align-items: center;text-align: center;justify-content: center;padding: 10px;max-width: 800px;margin: auto;}ul.quality-pt-list {text-align: center;padding: 10px;list-style: none;text-transform: capitalize;outline: var(--primary-outline);width: 370px;}.btns {padding: 8px 15px;font-size: 1rem;margin: 5px;border: none;font-weight: bold;transition: 0.25s ease-in-out;cursor: pointer;color: #fff;}#add-row-id {background: rgb(0, 188, 0);}#submit-input-id {background: rgb(0, 128, 188);}#add-row-id:hover {box-shadow: var(--box-shadow);}#submit-input-id:hover {box-shadow: var(--box-shadow);}.gpa-calculator-section {display: flex;flex-direction: column;justify-content: center;align-items: center;padding: 10px;}.results-container {padding: 10px;margin-top: 20px;outline: var(--primary-outline);width: 300px;height: 55px;display: flex;flex-direction: column;align-items: center;justify-content: center;}.error {margin-top: 20px;font-size: 18px;font-weight: bold;color: red;}.gpa-table-section {position: relative;top: -20px;max-width: 150px;display: flex;justify-content: center;padding: 10px;margin: auto;margin-top: 40px;height: 200px;overflow: hidden;box-shadow: var(--primary-box-shadow);outline: var(--primary-outline);transition: var(--primary-transition);}.gpa-table-section:hover {height: 600px;}.additional-link {position: absolute;left: 50%;top: 95px;transform: translateX(-50%);text-align: center;margin: auto;outline: var(--primary-outline);padding: 5px 10px;box-shadow: var(--primary-box-shadow);transition: var(--primary-transition);}.additional-link:hover {background-color: black;color: #fff;}.expand-tools {text-align: center;border-bottom: 1px solid #000;width: 350px;margin: 30px auto;}td {text-align: center;}table {width: 100%;padding: 10px;}td {background: black;color: #fff;box-shadow: var(--box-shadow);padding: 5px;font-weight: bold;}footer {position: relative;width: 100%;margin-bottom: 10px;bottom: 0;transition: 0.3s ease-in-out;}.footer-show {bottom: 0;}footer p {text-align: center;}footer p span {color: rgb(98, 98, 98);}.social-connect {text-align: center;margin: 20px auto;}.social-connect h1 {max-width: 400px;margin: 20px auto;padding: 5px;border-bottom: 1px solid #c9c9c9;}.social-connect i {font-size: 2rem;transition: all 0.25s ease-in-out;color: var(--github-icon-color);}.social-connect i:hover {transform: scale(1.2);}.main-site-redirect-link a {font-weight: 600;color: rgb(176, 176, 176);transition: var(--primary-transition);}.main-site-redirect-link a:hover {color: #000;};
