--- a/darkmode.css
+++ b/darkmode.css
@@ -1,21 +1,1 @@
-:root {
-  --clr-bcg: #fff;
-  --clr-font: #282c35;
-  --clr-grey: #64748b;
-}
-.dark-mode {
-  --clr-bcg: rgb(45, 45, 45);
-  --clr-font: #fff;
-  --clr-grey: #cbd5e1;
-}
-/* DARK MODE OPTIONS */
-/* DM OPTIONS */
-body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background: var(--clr-bcg);
-  color: var(--clr-font);
-  line-height: 1.5;
-  font-size: 1rem;
-  transition: all 0.2s linear;
-}
+:root {--clr-bcg: #fff;--clr-font: #282c35;--clr-grey: #64748b;}.dark-mode {--clr-bcg: rgb(45, 45, 45);--clr-font: #fff;--clr-grey: #cbd5e1;}body {font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;background: var(--clr-bcg);color: var(--clr-font);line-height: 1.5;font-size: 1rem;transition: all 0.2s linear;}
